--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<div class="container text-center still">
-		<h1>Welcome to BurakOzcelik.com</h1>
+		<h1>Welcome to AsanChat.az</h1>
 		<h3><a th:href="@{/users}">Start Chat</a></h3>
 		<h3><a th:href="@{/register}">Register</a></h3>
 		<h3><a th:href="@{/login}">Login</a></h3>
@@ -21,12 +21,12 @@
 	
 </body>
 </html>
-<style> 
-body {
-  background-image: url("https://i.pinimg.com/originals/2e/24/f4/2e24f45c6378355898922da7a909c4c8.jpg");
-  background-repeat: repeat;
-  background-color: #cccccc;
-}
+<style>
+	body {
+		background-image: url("https://static.vecteezy.com/system/resources/previews/000/561/457/original/chat-app-logo-icon-vector.jpg");
+		background-repeat: no-repeat;
+		background-size: 1500px 1000px;
+	}
 .still {
   background-repeat: repeat;
   background-color: #cccccc;
