--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -265,7 +265,7 @@
         <ul class="list">
             <li class="clearfix">
                 <img alt="avatar" height="55px"
-                     src="https://rtfm.co.ua/wp-content/plugins/all-in-one-seo-pack/images/default-user-image.png"
+                     src="https://th.bing.com/th/id/OIP.JkHByl9DyOBjxiwmgbhy1gHaHa?w=196&h=198&c=7&r=0&o=5&dpr=1.3&pid=1.7"
                      width="55px"/>
                 <div class="about">
                     <div class="name">UserLogin</div>
@@ -277,7 +277,7 @@
 
             <li class="clearfix">
                 <img alt="avatar" height="55px"
-                     src="https://rtfm.co.ua/wp-content/plugins/all-in-one-seo-pack/images/default-user-image.png"
+                     src="https://th.bing.com/th/id/OIP.JkHByl9DyOBjxiwmgbhy1gHaHa?w=196&h=198&c=7&r=0&o=5&dpr=1.3&pid=1.7"
                      width="55px"/>
                 <div class="about">
                     <div class="name">UserLogin</div>
@@ -292,7 +292,7 @@
     <div class="chat">
         <div class="chat-header clearfix">
             <img alt="avatar" height="55px"
-                 src="https://rtfm.co.ua/wp-content/plugins/all-in-one-seo-pack/images/default-user-image.png"
+                 src="https://th.bing.com/th/id/OIP.JkHByl9DyOBjxiwmgbhy1gHaHa?w=196&h=198&c=7&r=0&o=5&dpr=1.3&pid=1.7"
                  width="55px"/>
 
             <div class="chat-about">
@@ -509,7 +509,7 @@
 	        let usersTemplateHTML = "";
 	        for (let i = 0; i < users.length; i++) {
 	            usersTemplateHTML = usersTemplateHTML + '<a href="#" onclick="selectUser(\'' + users[i] + '\')"><li class="clearfix">\n' +
-	                '                <img src="https://rtfm.co.ua/wp-content/plugins/all-in-one-seo-pack/images/default-user-image.png" width="55px" height="55px" alt="avatar" />\n' +
+	                '                <img src="https://th.bing.com/th/id/OIP.JkHByl9DyOBjxiwmgbhy1gHaHa?w=196&h=198&c=7&r=0&o=5&dpr=1.3&pid=1.7" width="55px" height="55px" alt="avatar" />\n' +
 	                '                <div class="about">\n' +
 	                '                    <div id="userNameAppender_' + users[i] + '" class="name">' + users[i] + '</div>\n' +
 	                '                    <div class="status">\n' +
