--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -264,9 +264,10 @@
 <body>
 <div class="container clearfix">
     <div class="people-list" id="people-list">
-      WELCOME [[${#request.userPrincipal.principal.fullName}]]
-        <div class="search">
-            <input id="userName" placeholder="Write your userName" type="text"/>
+      Welcome to ChatApp
+        <div class="search" style="color: lightgreen;">
+            [[${#request.userPrincipal.principal.fullName}]]
+            <br><br>
             <button onclick="registration()">Enter the chat</button>
             <button onclick="fetchAll()">Refresh</button>
         </div>
@@ -279,7 +280,7 @@
     <div class="chat">
         <div class="chat-header clearfix">
             <img alt="avatar" height="55px"
-                 src="https://rtfm.co.ua/wp-content/plugins/all-in-one-seo-pack/images/default-user-image.png"
+                 src="https://th.bing.com/th/id/OIP.JkHByl9DyOBjxiwmgbhy1gHaHa?w=196&h=198&c=7&r=0&o=5&dpr=1.3&pid=1.7"
                  width="55px"/>
 
             <div class="chat-about">
@@ -473,7 +474,7 @@
 	        let usersTemplateHTML = "";
 	        for (let i = 0; i < users.length; i++) {
 	            usersTemplateHTML = usersTemplateHTML + '<a href="#" onclick="selectUser(\'' + users[i] + '\')"><li class="clearfix">\n' +
-	                '                <img src="https://rtfm.co.ua/wp-content/plugins/all-in-one-seo-pack/images/default-user-image.png" width="55px" height="55px" alt="avatar" />\n' +
+	                '                <img src="https://th.bing.com/th/id/OIP.JkHByl9DyOBjxiwmgbhy1gHaHa?w=196&h=198&c=7&r=0&o=5&dpr=1.3&pid=1.7" width="55px" height="55px" alt="avatar" />\n' +
 	                '                <div class="about">\n' +
 	                '                    <div id="userNameAppender_' + users[i] + '" class="name">' + users[i] + '</div>\n' +
 	                '                    <div class="status">\n' +
